--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "yson",
   "displayName": "YSON",
   "description": "Adds YSON support to VS Code",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nordikafiles/vscode-yson"
+  },
   "license": "Apache-2.0",
   "version": "0.0.1",
   "engines": {
