--- a/package.json
+++ b/package.json
@@ -7,24 +7,67 @@
     "url": "https://github.com/nordikafiles/vscode-yson"
   },
   "license": "Apache-2.0",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "engines": {
-    "vscode": "^1.81.0"
+    "vscode": "^1.84.0"
   },
   "categories": [
-    "Programming Languages"
+    "Programming Languages",
+    "Formatters"
   ],
+  "activationEvents": [],
+  "main": "./out/extension.js",
   "contributes": {
-    "languages": [{
-      "id": "yson",
-      "aliases": ["yson", "yson"],
-      "extensions": [".yson"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "yson",
-      "scopeName": "source.yson",
-      "path": "./syntaxes/yson.tmLanguage.json"
-    }]
+    "languages": [
+      {
+        "id": "yson",
+        "aliases": [
+          "yson",
+          "yson"
+        ],
+        "extensions": [
+          ".yson"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "yson",
+        "scopeName": "source.yson",
+        "path": "./syntaxes/yson.tmLanguage.json"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile; make",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "fmt": "prettier -w .",
+    "package": "vsce package"
+  },
+  "devDependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/golang-wasm-exec": "^1.15.2",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
+    "@types/tmp": "^0.2.6",
+    "@types/vscode": "^1.84.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
+    "@vscode/vsce": "^2.22.0",
+    "@ytsaurus/javascript-wrapper": "^0.4.0",
+    "eslint": "^8.41.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "prettier": "^3.1.0",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@peculiar/webcrypto": "^1.4.3",
+    "tmp": "^0.2.1"
   }
 }
