--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/nordikafiles/vscode-yson"
   },
+  "publisher": "mamogaaa",
   "license": "Apache-2.0",
   "version": "0.2.0",
   "engines": {
